{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 325,
  "lineage": "1e242089-72c8-d110-32f0-23c98ffe7434",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183726844:security-group/sg-0ac4b4870dac291dd",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0ac4b4870dac291dd",
            "ingress": [],
            "name": "my-cluster1-cluster-20260102131334709400000004",
            "name_prefix": "my-cluster1-cluster-",
            "owner_id": "590183726844",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "my-cluster1-cluster",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-cluster1-cluster",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cc9f592eeeac3309"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infra.aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183726844:security-group/sg-0217ec9c129ac7a09",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0217ec9c129ac7a09",
            "ingress": [],
            "name": "my-cluster1-node-20260102131334707400000003",
            "name_prefix": "my-cluster1-node-",
            "owner_id": "590183726844",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "my-cluster1-node",
              "Terraform": "true",
              "kubernetes.io/cluster/my-cluster1": "owned"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-cluster1-node",
              "Terraform": "true",
              "kubernetes.io/cluster/my-cluster1": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cc9f592eeeac3309"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infra.aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1851657178",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0ac4b4870dac291dd",
            "security_group_rule_id": "sgr-00d2c91c7c8f181ab",
            "self": false,
            "source_security_group_id": "sg-0217ec9c129ac7a09",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.infra.aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-3593515764",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "us-east-1",
            "security_group_id": "sg-0217ec9c129ac7a09",
            "security_group_rule_id": "sgr-081c146a6a70f155b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.infra.aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_10251_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 10251/tcp webhook",
            "from_port": 10251,
            "id": "sgrule-1951574756",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0217ec9c129ac7a09",
            "security_group_rule_id": "sgr-06855843e4691ae01",
            "self": false,
            "source_security_group_id": "sg-0ac4b4870dac291dd",
            "timeouts": null,
            "to_port": 10251,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.infra.aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1008662466",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0217ec9c129ac7a09",
            "security_group_rule_id": "sgr-0367c068869b11b6d",
            "self": false,
            "source_security_group_id": "sg-0ac4b4870dac291dd",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.infra.aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-468903484",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0217ec9c129ac7a09",
            "security_group_rule_id": "sgr-0d8560f93d9c4ae7f",
            "self": false,
            "source_security_group_id": "sg-0ac4b4870dac291dd",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.infra.aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-3534782890",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0217ec9c129ac7a09",
            "security_group_rule_id": "sgr-09ff5db72e2ae4afc",
            "self": false,
            "source_security_group_id": "sg-0ac4b4870dac291dd",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.infra.aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-3253517707",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0217ec9c129ac7a09",
            "security_group_rule_id": "sgr-0df24efebc7d83075",
            "self": false,
            "source_security_group_id": "sg-0ac4b4870dac291dd",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.infra.aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2773323328",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0217ec9c129ac7a09",
            "security_group_rule_id": "sgr-0c33b8c7e8e1e0a04",
            "self": false,
            "source_security_group_id": "sg-0ac4b4870dac291dd",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.infra.aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1075575455",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0217ec9c129ac7a09",
            "security_group_rule_id": "sgr-0bd78096728283e5b",
            "self": false,
            "source_security_group_id": "sg-0ac4b4870dac291dd",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.infra.aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-3042563369",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0217ec9c129ac7a09",
            "security_group_rule_id": "sgr-04afe751326f6d2f9",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.infra.aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1351118702",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0217ec9c129ac7a09",
            "security_group_rule_id": "sgr-07a7f8d3b82af9f48",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.infra.aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-4107783297",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "region": "us-east-1",
            "security_group_id": "sg-0217ec9c129ac7a09",
            "security_group_rule_id": "sgr-067a0996723d8d2dd",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.infra.aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks_managed_node_group[\"example\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_eip",
      "name": "net_eip",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0461e46620d3011f2",
            "arn": "arn:aws:ec2:us-east-1:590183726844:elastic-ip/eipalloc-0461e46620d3011f2",
            "domain": "vpc",
            "id": "eipalloc-0461e46620d3011f2",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-87-181-198.compute-1.amazonaws.com",
            "public_ip": "54.87.181.198",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Created_by": "Avinash",
              "Name": "dev-eip-1"
            },
            "tags_all": {
              "Created_by": "Avinash",
              "Name": "dev-eip-1"
            }
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-057273ec7783dcdf6",
            "arn": "arn:aws:ec2:us-east-1:590183726844:elastic-ip/eipalloc-057273ec7783dcdf6",
            "domain": "vpc",
            "id": "eipalloc-057273ec7783dcdf6",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-217-216-177.compute-1.amazonaws.com",
            "public_ip": "44.217.216.177",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Created_by": "Avinash",
              "Name": "dev-eip-2"
            },
            "tags_all": {
              "Created_by": "Avinash",
              "Name": "dev-eip-2"
            }
          }
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183726844:internet-gateway/igw-01d82e3ef7d8fb06b",
            "id": "igw-01d82e3ef7d8fb06b",
            "owner_id": "590183726844",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-0cc9f592eeeac3309"
          },
          "dependencies": [
            "module.infra.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0461e46620d3011f2",
            "association_id": "eipassoc-016c02cbdd924c78c",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-092ebbf459d24363d",
            "network_interface_id": "eni-0a73ff8037001ac38",
            "private_ip": "10.1.1.183",
            "public_ip": "54.87.181.198",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02a3ff45e335cdc40",
            "tags": {
              "Name": "dev-nat-gw-1"
            },
            "tags_all": {
              "Name": "dev-nat-gw-1"
            },
            "vpc_id": "vpc-0cc9f592eeeac3309"
          },
          "dependencies": [
            "module.infra.aws_eip.net_eip",
            "module.infra.aws_internet_gateway.igw",
            "module.infra.aws_subnet.public_subnet",
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-057273ec7783dcdf6",
            "association_id": "eipassoc-0362043eb6d12c0b6",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0b4881f018de54a65",
            "network_interface_id": "eni-0540e908380e8c37b",
            "private_ip": "10.1.2.133",
            "public_ip": "44.217.216.177",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0954efb88109d333e",
            "tags": {
              "Name": "dev-nat-gw-2"
            },
            "tags_all": {
              "Name": "dev-nat-gw-2"
            },
            "vpc_id": "vpc-0cc9f592eeeac3309"
          },
          "dependencies": [
            "module.infra.aws_eip.net_eip",
            "module.infra.aws_internet_gateway.igw",
            "module.infra.aws_subnet.public_subnet",
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183726844:route-table/rtb-06ee4eabe14450cc6",
            "id": "rtb-06ee4eabe14450cc6",
            "owner_id": "590183726844",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-092ebbf459d24363d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-private-rt-1"
            },
            "tags_all": {
              "Name": "dev-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cc9f592eeeac3309"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infra.aws_eip.net_eip",
            "module.infra.aws_internet_gateway.igw",
            "module.infra.aws_nat_gateway.ngw",
            "module.infra.aws_subnet.public_subnet",
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183726844:route-table/rtb-06a13d749e8d43f37",
            "id": "rtb-06a13d749e8d43f37",
            "owner_id": "590183726844",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b4881f018de54a65",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-private-rt-2"
            },
            "tags_all": {
              "Name": "dev-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cc9f592eeeac3309"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infra.aws_eip.net_eip",
            "module.infra.aws_internet_gateway.igw",
            "module.infra.aws_nat_gateway.ngw",
            "module.infra.aws_subnet.public_subnet",
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183726844:route-table/rtb-0f70f707fca0be86c",
            "id": "rtb-0f70f707fca0be86c",
            "owner_id": "590183726844",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01d82e3ef7d8fb06b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-public-rt-1"
            },
            "tags_all": {
              "Name": "dev-public-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cc9f592eeeac3309"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infra.aws_internet_gateway.igw",
            "module.infra.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183726844:route-table/rtb-0d0607572655695c0",
            "id": "rtb-0d0607572655695c0",
            "owner_id": "590183726844",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01d82e3ef7d8fb06b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-public-rt-2"
            },
            "tags_all": {
              "Name": "dev-public-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cc9f592eeeac3309"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infra.aws_internet_gateway.igw",
            "module.infra.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assocaition_pub",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b99c611e32a1a02a",
            "region": "us-east-1",
            "route_table_id": "rtb-0f70f707fca0be86c",
            "subnet_id": "subnet-02a3ff45e335cdc40"
          },
          "dependencies": [
            "module.infra.aws_internet_gateway.igw",
            "module.infra.aws_route_table.public_rt",
            "module.infra.aws_subnet.public_subnet",
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-008b4dc2b07634cd4",
            "region": "us-east-1",
            "route_table_id": "rtb-0d0607572655695c0",
            "subnet_id": "subnet-0954efb88109d333e"
          },
          "dependencies": [
            "module.infra.aws_internet_gateway.igw",
            "module.infra.aws_route_table.public_rt",
            "module.infra.aws_subnet.public_subnet",
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_associateion_pri",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d368052b3511b716",
            "region": "us-east-1",
            "route_table_id": "rtb-06ee4eabe14450cc6",
            "subnet_id": "subnet-0d424b9a5b2a6a793"
          },
          "dependencies": [
            "module.infra.aws_eip.net_eip",
            "module.infra.aws_internet_gateway.igw",
            "module.infra.aws_nat_gateway.ngw",
            "module.infra.aws_route_table.private_rt",
            "module.infra.aws_subnet.private_subnet",
            "module.infra.aws_subnet.public_subnet",
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d8106576a792524",
            "region": "us-east-1",
            "route_table_id": "rtb-06a13d749e8d43f37",
            "subnet_id": "subnet-06ff2015983ad23be"
          },
          "dependencies": [
            "module.infra.aws_eip.net_eip",
            "module.infra.aws_internet_gateway.igw",
            "module.infra.aws_nat_gateway.ngw",
            "module.infra.aws_route_table.private_rt",
            "module.infra.aws_subnet.private_subnet",
            "module.infra.aws_subnet.public_subnet",
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183726844:subnet/subnet-0d424b9a5b2a6a793",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d424b9a5b2a6a793",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183726844",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-private-1"
            },
            "tags_all": {
              "Name": "dev-private-1"
            },
            "vpc_id": "vpc-0cc9f592eeeac3309"
          },
          "dependencies": [
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183726844:subnet/subnet-06ff2015983ad23be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ff2015983ad23be",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183726844",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-private-2"
            },
            "tags_all": {
              "Name": "dev-private-2"
            },
            "vpc_id": "vpc-0cc9f592eeeac3309"
          },
          "dependencies": [
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183726844:subnet/subnet-02a3ff45e335cdc40",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a3ff45e335cdc40",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183726844",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-public-1"
            },
            "tags_all": {
              "Name": "dev-public-1"
            },
            "vpc_id": "vpc-0cc9f592eeeac3309"
          },
          "dependencies": [
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183726844:subnet/subnet-0954efb88109d333e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0954efb88109d333e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183726844",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-public-2"
            },
            "tags_all": {
              "Name": "dev-public-2"
            },
            "vpc_id": "vpc-0cc9f592eeeac3309"
          },
          "dependencies": [
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183726844:vpc/vpc-0cc9f592eeeac3309",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-08e9081d06fa31fc4",
            "default_route_table_id": "rtb-03fa83b69e0f8071d",
            "default_security_group_id": "sg-0bf61fb374e8b0889",
            "dhcp_options_id": "dopt-0582f9aa8635640e5",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cc9f592eeeac3309",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03fa83b69e0f8071d",
            "owner_id": "590183726844",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Name": "dev-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}